laying hens scoring screens

--- a/app/views/layinghens/current/hen-aviary-system.html
+++ b/app/views/layinghens/current/hen-aviary-system.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the building have a laying hen aviary system (excluding combi-cage systems)?
+                Will the housing have a laying hen aviary system (excluding combi-cage systems)?
               </h1>
             </legend>
           
