--- a/app/views/layinghens/current/hen-cleaning-area.html
+++ b/app/views/layinghens/current/hen-cleaning-area.html
@@ -36,17 +36,17 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the hen housing have a secure cleaning area at each external pedestrian access point?
+                Will the hen housing have a biosecure cleaning area at each external pedestrian access point?
               </h1>
             </legend>
 
             <!-- Hint text -->
-            <p class="govuk-hint"> At each external pedestrian access point, the building must have:</p>
+            <p class="govuk-hint"> The building must have a biosecure cleaning area at each external pedestrian point with: </p>
             
             <ul class="govuk-list govuk-list--bullet">
-              <li class="govuk-hint">hand washing facilities that are externall to the cleaning area</li>
-              <li class="govuk-hint">a floor-mounted barrier separating the cleaning area from the bird living area</li>
-              <li class="govuk-hint">a changing area with separate storage for clean and dirty boots or clothing</li>
+              <li class="govuk-hint">changing facilities, divided by a floor-mounted physical barrier into a clean area and a dirty area</li>
+              <li class="govuk-hint">in the dirty area, handwashing facilities and storage for clothes and boots that you use outside of the housing</li>
+              <li class="govuk-hint">in the clean area, a footbath and storage for clothes and boots that you use inside of the shed </li>
              </ul>
           
             <!-- Option: Yes -->
@@ -81,22 +81,7 @@
     <!-- Eligibility sidebar -->
     <div class="govuk-grid-column-one-third">
 
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
-          </h2>
-          <p>To reduce biosecurity risk, each external pedestrian access point of the building must have a cleaning area with:</p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>hand washing facilities that are extenral to the cleaning area</li>
-            <li>a floor-mounted barrier</li>
-            <li>a changing area with separate storage for clean and dirty boots or clothing</li>
-           </ul>
-
-          <a href="#">
-          </a>
-
-      </div>
+    
 
   </div>
 
