--- a/app/views/layinghens/current/hen-project-type.html
+++ b/app/views/layinghens/current/hen-project-type.html
@@ -45,7 +45,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="hen-housing-type" name="hen-project-type" type="radio" value="new">
                 <label class="govuk-label govuk-radios__label" for="hen-housing-type">
-                  Building new housing
+                  Replacing existing housing
                 </label>
               </div>
 
@@ -63,6 +63,9 @@
                   <label class="govuk-label govuk-radios__label" for="hen-housing-type-3">
                     Adding a veranda only to existing housing
                   </label>
+                  <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
+                    The RPA will award the grant funding for adding a veranda only to existing housing on a first-come first-served basis
+                  </div>
                 </div>
 
                 <!-- 'or' divider-->
@@ -95,16 +98,12 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>The building must have:</p>
+          <p>You can apply for grant funding for either a housing project or adding a veranda only to existing housing.</p>
 
-          <ul class="govuk-list govuk-list--bullet">
-            <li>building new housing for laying hens or pullets</li>
-            <li>refurbishing or extending existing laying hens or pullet housing</li>
-            <li>adding a veranda to existing housing</li>
-          </ul>
-          
-          <a href="#">
-          </a>
+          <p>The RPA will award grant funding for adding a veranda only to existing housing on a first-come first-served basis. You do not need to complete any eligibility or scoring questions.</p>
+
+          <p>To apply for grant funding for housing projects, you need to complete eligibility and scoring questions.</p>      
+    
 
       </div>
 
