--- a/app/views/layinghens/current/hen-ventilation-quality.html
+++ b/app/views/layinghens/current/hen-ventilation-quality.html
@@ -40,10 +40,10 @@
               </h1>
             </legend>
 
-            <p class="govuk-hint"> The ventilation must have:</p>
+            <p class="govuk-hint">The ventilation must maintain air quality (at bird head height of less than 50cm) at a:</p>
             
             <ul class="govuk-list govuk-list--bullet">
-              <li class="govuk-hint">carbon dioxide level of less than 3,000 ppm</li>
+              <li class="govuk-hint">carbon dioxide level of less than 3,000 parts per million (ppm)</li>
               <li class="govuk-hint">percentage relative humidity (%rH) level of 40% to 70%</li>
              </ul>
           
