--- a/app/views/layinghens/current/hen-veranda-size.html
+++ b/app/views/layinghens/current/hen-veranda-size.html
@@ -41,7 +41,7 @@
             </legend>
 
             <!-- Hint text -->
-            <p class="govuk-hint">Barn system projects that do not have access to an area equal to 30% of theindoor housing area are exempt from this requirement.</p>
+            <p class="govuk-hint">Barn system projects that do not have access to an area equal to 30% of the indoor housing area are exempt from this adding a veranda.</p>
 
             <!-- Option: Laying Hens -->
               <div class="govuk-radios" data-module="govuk-radios">
@@ -94,7 +94,7 @@
           </h2>
 
           <p>You must add a veranda that is an equal size to 30% of the indoor bird housing area.</p>
-          <p>Barn system projects that do not have access to an area equal to 30% of the indoor housnig area are exempt from this requirement.</p>
+          <p>Barn system projects that do not have access to an area equal to 30% of the indoor housing area are exempt from this requirement.</p>
   
           <a href="#">
           </a>
