--- a/app/views/layinghens/current/hen-veranda-specification.html
+++ b/app/views/layinghens/current/hen-veranda-specification.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the building have a veranda with the these features?
+                Will the veranda have these features?
               </h1>
             </legend>
 
@@ -47,7 +47,8 @@
               <li class="govuk-hint">a waterproof insulated roof</li>
               <li class="govuk-hint">guttering and a down-pipe to feed into the drainage system of the main building</li>
               <li class="govuk-hint">a perimeter wall of equal to or more than 1 metre in height</li>
-              <li class="govuk-hint">mesh roller-screen system running underneath the length of the roof, <b>positioned to fall flush with the wall when extended</b></li>
+              <li class="govuk-hint">mesh roller-screen system running underneath the length of the roof, <b>that fits against the wall when extended
+              </b></li>
               <li class="govuk-hint">a dimmable LED lighting system between 0 lux and 60 lux</li>
              </ul>
           
@@ -83,17 +84,7 @@
      <!-- Eligibility sidebar -->
      <div class="govuk-grid-column-one-third">
 
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
-          </h2>
-
-          <p>The floor area of the veranda must be excluded from any calculation of stocking density (regardless of whether 24h access is provided)</p>
-  
-          <a href="#">
-          </a>
-
-      </div>
+      
 
   </div>
 
