--- a/app/views/layinghens/current/hen-housing-structure.html
+++ b/app/views/layinghens/current/hen-housing-structure.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Poultry Type – {{ serviceName }} – GOV.UK Prototype Kit
+  Housing Structure – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,14 +29,14 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="poultry-type-answer" method="post">
+      <form class="form" action="hen-housing-structure-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What type of poultry is the project for?
+                Will the housing structure include the following?
               </h1>
             </legend>
 
@@ -46,18 +46,18 @@
             <!-- Option: Laying Hens -->
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="poultry-type" name="poultry-type" type="checkbox" value="hens">
+                  <input class="govuk-checkboxes__input" id="poultry-type" name="hen-housing-structure" type="checkbox" value="shower">
                   <label class="govuk-label govuk-checkboxes__label" for="poultry-type">
-                    Laying hens (over 15 weeks old)
+                    Shower-in-facilities in the lobby or changing room
                   </label>
                 </div>
 
                 <!-- Option: Pullets -->
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="poultry-type-2" name="poultry-type" type="checkbox" value="pullets">
+                  <input class="govuk-checkboxes__input" id="poultry-type-2" name="hen-housing-structure" type="checkbox" value="storage">
                   <label class="govuk-label govuk-checkboxes__label" for="poultry-type-2">
-                    Pullets (up to and including 15 weeks old)
+                    An externally accessible storage space 
                   </label>
                 </div>
 
@@ -67,7 +67,7 @@
               <!-- Option: None of the above -->
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="poultry-type-3" name="poultry-type" type="checkbox" value="none">
+                  <input class="govuk-checkboxes__input" id="poultry-type-3" name="hen-housing-structure" type="checkbox" value="none">
                   <label class="govuk-label govuk-checkboxes__label" for="poultry-type-3">
                     None of the above
                   </label>
@@ -76,16 +76,6 @@
             </div>
           </fieldset>
         </div>
-
-        <div class="govuk-warning-text">
-          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-          <strong class="govuk-warning-text__text">
-            <span class="govuk-visually-hidden">Warning</span>
-            You can only apply for grant funding for a veranda-only project for one type of poultry
-          </strong>
-        </div>
-
-
         
         <!-- Continue button -->
         <button class="govuk-button" data-module="govuk-button">
@@ -94,26 +84,6 @@
 
       </form>
     </div>
-    
-    <!-- Eligibility sidebar -->
-    <div class="govuk-grid-column-one-third">
-
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
-          </h2>
-          <p>This grant is for:</p>
-
-            <ul class="govuk-list govuk-list--bullet">
-              <li>building new housing for laying hens or pullets</li>
-              <li>refurbishing or extending existing laying hens or pullet housing</li>
-              <li>adding a veranda to existing housing</li>
-            </ul>
-  
-          <a href="#">
-          </a>
-
-      </div>
 
   </div>
 
