--- a/app/views/layinghens/current/hen-inlets.html
+++ b/app/views/layinghens/current/hen-inlets.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Hen Building Items – {{ serviceName }} – GOV.UK Prototype Kit
+  Hen Inlets – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,40 +29,30 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="hen-building-items-answer" method="post">
+      <form class="form" action="hen-inlets-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the hen housing have these items?
+                Will the side wall ventilation inlets and outlets be capped with mesh less than or equal to 25 millimetres (mm) in thickness?
               </h1>
             </legend>
-
-            <!-- Hint text -->
-            <p class="govuk-hint"> The building must have:</p>
-            
-            <ul class="govuk-list govuk-list--bullet">
-              <li class="govuk-hint">a fixed structure with a solid concrete floor</li>
-              <li class="govuk-hint">water-tight roof and walls</li>
-              <li class="govuk-hint">a capped roof and sidewall ventilation inlets and outlets</li>              
-              <li class="govuk-hint">catch trays under all the chimneys and vents</li>
-             </ul>
           
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-building-item" name="hen-building-items" type="radio" value="yes">
-                <label class="govuk-label govuk-radios__label" for="has-building-item">
+                <input class="govuk-radios__input" id="has-insulation-hen" name="hen-inlets" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="has-insulation-hen">
                   Yes
                 </label>
               </div>
 
               <!-- Option: No -->
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-building-item-2" name="hen-building-items" type="radio" value="no">
-                <label class="govuk-label govuk-radios__label" for="has-building-item-2">
+                <input class="govuk-radios__input" id="has-insulation-hen-2" name="hen-inlets" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="has-insulation-hen-2">
                   No
                 </label>
               </div>
@@ -86,15 +76,8 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>The building must have:</p>
-
-          <ul class="govuk-list govuk-list--bullet">
-            <li>a fixed structure with a solid concrete floor</li>
-            <li>water-tight roof and walls</li>
-            <li>a capped roof</li>
-            <li>sidewall ventilation inlets and outlets</li>
-            <li>catch trays under all the chimneys and vents</li>
-           </ul>
+          <p>The housing must have sidewall ventilation inlets and outlets that are capped with mesh which is less than or equal to 25mm in thickness.</p>
+          
 
           <a href="#">
           </a>
