--- a/app/views/layinghens/current/hen-drains.html
+++ b/app/views/layinghens/current/hen-drains.html
@@ -36,12 +36,12 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the hen housing have drains and drainage channels with secure drain covers?
+                Will the designated washing and disinfecting area have equipment for removing and storing soiled water?
               </h1>
             </legend>
 
             <!-- Hint text -->
-            <p class="govuk-hint">To remove soiled water (from ground and vehicle cleaning) and for soiled water storage</p>
+            <p class="govuk-hint">Removal and storage using a drainage system and soiled water storage tanks (separate from rain water storage tanks).</p>
             
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
