--- a/app/views/layinghens/current/hen-egg-store.html
+++ b/app/views/layinghens/current/hen-egg-store.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will there be direct access to the egg store without entering the bird living area?
+                Will there be direct external access to the egg store separate to the entrance lobby?
               </h1>
             </legend>
           
