--- a/app/views/layinghens/current/hen-manure-removal.html
+++ b/app/views/layinghens/current/hen-manure-removal.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the hen housing have an integrated automatic manure-removal belt system?
+                Will the aviary system have an integrated automatic manure-removal belt system?
               </h1>
             </legend>
           
@@ -68,6 +68,20 @@
 
       </form>
     </div>
+
+    <div class="govuk-grid-column-one-third">
+
+      <div class="app-step-nav-related app-step-nav-related--singular">
+        <h2 class="app-step-nav-related__heading">
+          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          </h2>
+         <p>The hen housing's aviary system must have an automatic manure-removal belt to ensure good air quality. </p>
+          
+
+      </div>
+
+  </div>
+
 
   </div>
 
