--- a/app/views/layinghens/current/hen-vehicle-washing.html
+++ b/app/views/layinghens/current/hen-vehicle-washing.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the hen housing have a washing or disinfecting area for vehicles?
+                Will the hen housing have a designated area for washing and disinfecting vehicles?
               </h1>
             </legend>
 
