--- a/app/views/layinghens/current/hen-veranda-placement.html
+++ b/app/views/layinghens/current/hen-veranda-placement.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the veranda be along the length of the hen housing, not the width?
+                Will the veranda use the length of the hen housing and face onto the range?
               </h1>
             </legend>
           
