--- a/app/views/layinghens/current/hen-welfare-ramps.html
+++ b/app/views/layinghens/current/hen-welfare-ramps.html
@@ -36,9 +36,11 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the hen housing have welfare ramps or platforms?
+                Will the aviary system have ramps or platforms that meet manufacture recommendations for high welfare?
               </h1>
             </legend>
+
+            <p class="govuk-hint">The frequency and position of ramps and platforms must meet the manufacturer's recommendation for a high welfare system.</p>
           
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
@@ -76,13 +78,13 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>The housing must include welfare ramps or platforms to allow the birds free movement around and within the system.</p>
-          <p>The birds must be able to move between levels without flying or jumping more than 1 metre in height.</p>
-          <a href="#">
-          </a>
+          <p>Unless the aviary system has been designed for easy access it must include welfare ramps or platforms to allow the birds free movement around and within the system.</p>
+          <p>The birds must be able to move between levels without flying or jumping more than one metre in height.</p>
 
       </div>
 
   </div>
+
+</div>
 
 {% endblock %}
