--- a/app/views/layinghens/current/hen-aviary-lighting.html
+++ b/app/views/layinghens/current/hen-aviary-lighting.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Veranda Biosecurity – {{ serviceName }} – GOV.UK Prototype Kit
+  Hen LED Lighting System – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,30 +29,33 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="hen-veranda-biosecurity-answer" method="post">
+      <form class="form" action="hen-aviary-lighting-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the veranda have the capacity to be made biosecure with at least 25mm mesh?
+                Will the aviary system have an integrated, fully-adjustable LED lighting system?
               </h1>
             </legend>
-          
+
+            <!-- Hint text -->
+            <p class="govuk-hint"> This provides dimmable non-flicker lighting at each level, including top perches and under the system itself</p>
+            
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-biosec" name="hen-veranda-biosecurity" type="radio" value="yes">
-                <label class="govuk-label govuk-radios__label" for="has-biosec">
+                <input class="govuk-radios__input" id="has-led-lighting-hen" name="hen-aviary-lighting" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="has-led-lighting-hen">
                   Yes
                 </label>
               </div>
 
               <!-- Option: No -->
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-biosec-2" name="hen-veranda-biosecurity" type="radio" value="no">
-                <label class="govuk-label govuk-radios__label" for="has-biosec-2">
+                <input class="govuk-radios__input" id="has-led-lighting-hen-2" name="hen-aviary-lighting" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="has-led-lighting-hen-2">
                   No
                 </label>
               </div>
@@ -69,16 +72,20 @@
       </form>
     </div>
 
-     <!-- Eligibility sidebar -->
-     <div class="govuk-grid-column-one-third">
+    <!-- Eligibility sidebar -->
+    <div class="govuk-grid-column-one-third">
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
+          <p>The lighting must be able to provide:</p>
 
-          <p>The veranda must be secured with at least 25mm mesh to stop wild birds and rodents from entering.</p>
-  
+          <ul class="govuk-list govuk-list--bullet">
+            <li>Non-flicker light between approximately 3000 Kelvin and 4000 Kelvin colour temperature</li>
+            <li>Zonal dimming between 0 lux and 60 lux</li>
+           </ul>
+
           <a href="#">
           </a>
 
