--- a/app/views/layinghens/current/hen-veranda-specification.html
+++ b/app/views/layinghens/current/hen-veranda-specification.html
@@ -47,8 +47,7 @@
               <li class="govuk-hint">a waterproof insulated roof</li>
               <li class="govuk-hint">guttering and a down-pipe to feed into the drainage system of the main building</li>
               <li class="govuk-hint">a perimeter wall of equal to or more than 1 metre in height</li>
-              <li class="govuk-hint">mesh roller-screen system running underneath the length of the roof, <b>that fits against the wall when extended
-              </b></li>
+              <li class="govuk-hint">mesh roller-screen system running underneath the length of the roof, that fits against the wall when extended</li>
               <li class="govuk-hint">a dimmable LED lighting system between 0 lux and 60 lux</li>
              </ul>
           
