--- a/app/views/layinghens/current/pullet-cleaning-area.html
+++ b/app/views/layinghens/current/pullet-cleaning-area.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Veranda Biosecurity – {{ serviceName }} – GOV.UK Prototype Kit
+  pullet Cleaning Area – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,30 +29,39 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="hen-veranda-biosecurity-answer" method="post">
+      <form class="form" action="pullet-cleaning-area-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the veranda have the capacity to be made biosecure with at least 25mm mesh?
+                Will the pullet housing have a biosecure cleaning area at each external pedestrian access point?
               </h1>
             </legend>
+
+            <!-- Hint text -->
+            <p class="govuk-hint"> The building must have a biosecure cleaning area at each external pedestrian point with: </p>
+            
+            <ul class="govuk-list govuk-list--bullet">
+              <li class="govuk-hint">changing facilities, divided by a floor-mounted physical barrier into a clean area and a dirty area</li>
+              <li class="govuk-hint">in the dirty area, handwashing facilities and storage for clothes and boots that you use outside of the housing</li>
+              <li class="govuk-hint">in the clean area, a footbath and storage for clothes and boots that you use inside of the shed </li>
+             </ul>
           
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-biosec" name="hen-veranda-biosecurity" type="radio" value="yes">
-                <label class="govuk-label govuk-radios__label" for="has-biosec">
+                <input class="govuk-radios__input" id="has-cleaning-area-pullet" name="pullet-cleaning-area" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="has-cleaning-area-pullet">
                   Yes
                 </label>
               </div>
 
               <!-- Option: No -->
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-biosec-2" name="hen-veranda-biosecurity" type="radio" value="no">
-                <label class="govuk-label govuk-radios__label" for="has-biosec-2">
+                <input class="govuk-radios__input" id="has-cleaning-area-pullet-2" name="pullet-cleaning-area" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="has-cleaning-area-pullet-2">
                   No
                 </label>
               </div>
@@ -69,20 +78,10 @@
       </form>
     </div>
 
-     <!-- Eligibility sidebar -->
-     <div class="govuk-grid-column-one-third">
+    <!-- Eligibility sidebar -->
+    <div class="govuk-grid-column-one-third">
 
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
-          </h2>
-
-          <p>The veranda must be secured with at least 25mm mesh to stop wild birds and rodents from entering.</p>
-  
-          <a href="#">
-          </a>
-
-      </div>
+    
 
   </div>
 
