--- a/app/views/layinghens/current/pullet-lighting-features.html
+++ b/app/views/layinghens/current/pullet-lighting-features.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Veranda Biosecurity – {{ serviceName }} – GOV.UK Prototype Kit
+  pullet Lighting System Features – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,30 +29,39 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="hen-veranda-biosecurity-answer" method="post">
+      <form class="form" action="pullet-lighting-features-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the veranda have the capacity to be made biosecure with at least 25mm mesh?
+                Will the pullet house lighting system have these features? 
               </h1>
             </legend>
+
+            <!-- Hint text -->
+            <p class="govuk-hint">The building's lighting system must have:</p>
+            
+            <ul class="govuk-list govuk-list--bullet">
+              <li class="govuk-hint">the ability to provide an automatic stepped dawn or dusk lighting environment (unless this is already provided as part of an aviary lighting system)</li>
+              <li class="govuk-hint">an option for red light</li>
+              <li class="govuk-hint">a fail-safe standby device in case of electrical or other failure</li>
+             </ul>
           
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-biosec" name="hen-veranda-biosecurity" type="radio" value="yes">
-                <label class="govuk-label govuk-radios__label" for="has-biosec">
+                <input class="govuk-radios__input" id="has-light-features-pullet" name="pullet-lighting-features" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="has-light-features-pullet">
                   Yes
                 </label>
               </div>
 
               <!-- Option: No -->
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-biosec-2" name="hen-veranda-biosecurity" type="radio" value="no">
-                <label class="govuk-label govuk-radios__label" for="has-biosec-2">
+                <input class="govuk-radios__input" id="has-light-features-pullet-2" name="pullet-lighting-features" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="has-light-features-pullet-2">
                   No
                 </label>
               </div>
@@ -69,21 +78,10 @@
       </form>
     </div>
 
-     <!-- Eligibility sidebar -->
-     <div class="govuk-grid-column-one-third">
+    <!-- Eligibility sidebar -->
+    <div class="govuk-grid-column-one-third">
 
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
-          </h2>
-
-          <p>The veranda must be secured with at least 25mm mesh to stop wild birds and rodents from entering.</p>
-  
-          <a href="#">
-          </a>
-
-      </div>
-
+     
   </div>
 
 {% endblock %}
