--- a/app/views/layinghens/current/pullet-ventilation-quality.html
+++ b/app/views/layinghens/current/pullet-ventilation-quality.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Veranda Biosecurity – {{ serviceName }} – GOV.UK Prototype Kit
+  pullet Ventilation Air Quality – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,30 +29,37 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="hen-veranda-biosecurity-answer" method="post">
+      <form class="form" action="pullet-ventilation-quality-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the veranda have the capacity to be made biosecure with at least 25mm mesh?
+                Will the ventilation maintain the required air quality parameters?
               </h1>
             </legend>
+
+            <p class="govuk-hint">The ventilation must maintain air quality (at bird head height of less than 50cm) at a:</p>
+            
+            <ul class="govuk-list govuk-list--bullet">
+              <li class="govuk-hint">carbon dioxide level of less than 3,000 parts per million (ppm)</li>
+              <li class="govuk-hint">percentage relative humidity (%rH) level of 40% to 70%</li>
+             </ul>
           
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-biosec" name="hen-veranda-biosecurity" type="radio" value="yes">
-                <label class="govuk-label govuk-radios__label" for="has-biosec">
+                <input class="govuk-radios__input" id="has-air-quality-pullet" name="pullet-ventilation-quality" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="has-air-quality-pullet">
                   Yes
                 </label>
               </div>
 
               <!-- Option: No -->
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-biosec-2" name="hen-veranda-biosecurity" type="radio" value="no">
-                <label class="govuk-label govuk-radios__label" for="has-biosec-2">
+                <input class="govuk-radios__input" id="has-air-quality-pullet-2" name="pullet-ventilation-quality" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="has-air-quality-pullet-2">
                   No
                 </label>
               </div>
@@ -68,21 +75,6 @@
 
       </form>
     </div>
-
-     <!-- Eligibility sidebar -->
-     <div class="govuk-grid-column-one-third">
-
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
-          </h2>
-
-          <p>The veranda must be secured with at least 25mm mesh to stop wild birds and rodents from entering.</p>
-  
-          <a href="#">
-          </a>
-
-      </div>
 
   </div>
 
