--- a/app/views/layinghens/current/pullet-vaccination.html
+++ b/app/views/layinghens/current/pullet-vaccination.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  pullet Inlets – {{ serviceName }} – GOV.UK Prototype Kit
+  pullet Cleaning Area – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,30 +29,35 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="pullet-inlets-answer" method="post">
+      <form class="form" action="pullet-vaccination-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the wall inlets and outlets be capped with mesh that is 6 millimetres (mm) or less in thickness?
+                Will there be a designated vaccination lobby with internal and external access?
               </h1>
             </legend>
+
+            <!-- Hint text -->
+            <p class="govuk-hint">Internal access from the bird living area and external access from the loading bay</p>
+            
+           
           
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-insulation-pullet" name="pullet-inlets" type="radio" value="yes">
-                <label class="govuk-label govuk-radios__label" for="has-insulation-pullet">
+                <input class="govuk-radios__input" id="has-cleaning-area-pullet" name="pullet-vaccination" type="radio" value="yes">
+                <label class="govuk-label govuk-radios__label" for="has-cleaning-area-pullet">
                   Yes
                 </label>
               </div>
 
               <!-- Option: No -->
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-insulation-pullet-2" name="pullet-inlets" type="radio" value="no">
-                <label class="govuk-label govuk-radios__label" for="has-insulation-pullet-2">
+                <input class="govuk-radios__input" id="has-cleaning-area-pullet-2" name="pullet-vaccination" type="radio" value="no">
+                <label class="govuk-label govuk-radios__label" for="has-cleaning-area-pullet-2">
                   No
                 </label>
               </div>
@@ -76,11 +81,16 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>The housing must have sidewall ventilation inlets and outlets that are capped with mesh which is less than or equal to 25mm in thickness.</p>
+          <p>The building must have a dedicated area to perform pullet vaccinations, with access to the loading bay. </p>
           
+
+          
+
       </div>
 
   </div>
+
+    
 
 </div>
 
