--- a/app/views/layinghens/current/pullet-which-system.html
+++ b/app/views/layinghens/current/pullet-which-system.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  pullet Inlets – {{ serviceName }} – GOV.UK Prototype Kit
+  Hen Project Type – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -29,39 +29,43 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="pullet-inlets-answer" method="post">
+      <form class="form" action="pullet-which-system-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Will the wall inlets and outlets be capped with mesh that is 6 millimetres (mm) or less in thickness?
+                Which multi-tier system will the pullet housing have?
               </h1>
             </legend>
+
           
-            <!-- Option: Yes -->
-            <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-insulation-pullet" name="pullet-inlets" type="radio" value="yes">
-                <label class="govuk-label govuk-radios__label" for="has-insulation-pullet">
-                  Yes
+                <input class="govuk-radios__input" id="hen-housing-type-2" name="pullet-which-system" type="radio" value="aviary">
+                <label class="govuk-label govuk-radios__label" for="hen-housing-type-2">
+                  Rearing aviary
                 </label>
+                <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
+                  A system that houses birds within tiers during the first 2 weeks of rearing and enables them to access the barn floor after 2 weeks
+                </div>
               </div>
 
-              <!-- Option: No -->
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-insulation-pullet-2" name="pullet-inlets" type="radio" value="no">
-                <label class="govuk-label govuk-radios__label" for="has-insulation-pullet-2">
-                  No
+                <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="hen-housing-type-3" name="pullet-which-system" type="radio" value="step">
+                <label class="govuk-label govuk-radios__label" for="hen-housing-type-3">
+                  Step-up system
                 </label>
+                <div id="signIn-item-hint" class="govuk-hint govuk-radios__hint">
+                  A floor system that resembles a rearing aviary post-brooding, with adjustable elevated tiers, which can be added and gradually raised as the birds grow.
+                </div>
               </div>
+
 
             </div>
           </fieldset>
-        </div>
+        
 
-        <!-- Continue button -->
         <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
@@ -76,8 +80,9 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>The housing must have sidewall ventilation inlets and outlets that are capped with mesh which is less than or equal to 25mm in thickness.</p>
-          
+          <p>The pullet housing must have a multi-tier system to enable the birds to transition between levels without flying or jumping more than 1m in height, horizontally or vertically.</p>  
+    
+
       </div>
 
   </div>
