--- a/app/views/layinghens/current/pullet-project-type.html
+++ b/app/views/layinghens/current/pullet-project-type.html
@@ -36,7 +36,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What is your hen housing project?
+                What is your pullet housing project?
               </h1>
             </legend>
 
@@ -45,7 +45,7 @@
               
              
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="hen-housing-type-2" name="hen-project-type" type="radio" value="refurb">
+                <input class="govuk-radios__input" id="hen-housing-type-2" name="pullet-project-type" type="radio" value="refurb">
                 <label class="govuk-label govuk-radios__label" for="hen-housing-type-2">
                   Replacing or refurbishing an existing housing
                 </label>
@@ -53,7 +53,7 @@
 
                  
               <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="hen-housing-type-3" name="hen-project-type" type="radio" value="veranda">
+              <input class="govuk-radios__input" id="hen-housing-type-3" name="pullet-project-type" type="radio" value="veranda">
               <label class="govuk-label govuk-radios__label" for="hen-housing-type-3">
                 Adding a veranda only to existing housing
               </label>
@@ -67,7 +67,7 @@
 
                   
               <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="hen-housing-type-4" name="hen-project-type" type="radio" value="none">
+              <input class="govuk-radios__input" id="hen-housing-type-4" name="pullet-project-type" type="radio" value="none">
               <label class="govuk-label govuk-radios__label" for="hen-housing-type-4">
                 None of the above
               </label>
