--- a/app/views/layinghens/current/farmer-type.html
+++ b/app/views/layinghens/current/farmer-type.html
@@ -29,7 +29,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action= /farmer-type-answer method="post">
+      <form class="form" action="farmer-type-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
@@ -46,7 +46,7 @@
             <!-- Option: Laying Hens -->
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="farmer-type" name="farmer-type" type="checkbox" value="laying-hen">
+                  <input class="govuk-checkboxes__input" id="farmer-type" name="farmer-type" type="checkbox" value="laying hens">
                   <label class="govuk-label govuk-checkboxes__label" for="farmer-type">
                     Laying hens (including pullets)
                   </label>
@@ -55,7 +55,7 @@
                 <!-- Option: Meat Chicknes -->
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="farmer-type-2" name="farmer-type" type="checkbox" value="meat-chickens">
+                  <input class="govuk-checkboxes__input" id="farmer-type-2" name="farmer-type" type="checkbox" value="meat chickens">
                   <label class="govuk-label govuk-checkboxes__label" for="farmer-type-2">
                     Meat chickens
                   </label>
@@ -121,7 +121,7 @@
               <!-- Option: None of the above -->
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="farmer-type-9" name="farmer-type" type="checkbox" value="none">
+                  <input class="govuk-checkboxes__input" id="farmer-type-9" name="farmer-type" type="checkbox" value="none" data-behaviour="exclusive">
                   <label class="govuk-label govuk-checkboxes__label" for="farmer-type-9">
                     None of the above
                   </label>
