--- a/app/views/layinghens/current/hen-housing-features.html
+++ b/app/views/layinghens/current/hen-housing-features.html
@@ -85,7 +85,7 @@
               <!-- Option: None of the above -->
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="housing-feature-5" name="hen-housing-features" type="checkbox" value="none">
+                  <input class="govuk-checkboxes__input" id="housing-feature-5" name="hen-housing-features" type="checkbox" value="none" data-behaviour="exclusive">
                   <label class="govuk-label govuk-checkboxes__label" for="housing-feature-5">
                     None of the above
                   </label>
