--- a/app/views/layinghens/current/hen-housing-structure.html
+++ b/app/views/layinghens/current/hen-housing-structure.html
@@ -67,7 +67,7 @@
               <!-- Option: None of the above -->
               <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="poultry-type-3" name="hen-housing-structure" type="checkbox" value="none">
+                  <input class="govuk-checkboxes__input" id="poultry-type-3" name="hen-housing-structure" type="checkbox" value="none" data-behaviour="exclusive">
                   <label class="govuk-label govuk-checkboxes__label" for="poultry-type-3">
                     None of the above
                   </label>
