--- a/app/views/layinghens/current/start.html
+++ b/app/views/layinghens/current/start.html
@@ -50,7 +50,7 @@
 
       {{ govukButton({
         text: "Start now",
-        href: "poultry-type",
+        href: "farmer-type",
         isStartButton: true
       }) }}
 
