--- a/app/views/layinghens/current/pullet-refurbishing.html
+++ b/app/views/layinghens/current/pullet-refurbishing.html
@@ -29,21 +29,21 @@
     <div class="govuk-grid-column-two-thirds">
 
       <!-- Path for next page -->
-      <form class="form" action="hen-refurbishing-answer" method="post">
+      <form class="form" action="pullet-refurbishing-answer" method="post">
 
         <!-- Page heading -->
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="changedName-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Are you replacing or refurbishing an existing hen housing?
+                Are you replacing or refurbishing an existing pullet housing?
               </h1>
             </legend>
             
             <!-- Option: Yes -->
             <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-bird-data" name="hen-refurbishing" type="radio" value="yes">
+                <input class="govuk-radios__input" id="has-bird-data" name="pullet-refurbishing" type="radio" value="yes">
                 <label class="govuk-label govuk-radios__label" for="has-bird-data">
                   Yes
                 </label>
@@ -51,7 +51,7 @@
 
               <!-- Option: No -->
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="has-bird-data-2" name="hen-refurbishing" type="radio" value="no">
+                <input class="govuk-radios__input" id="has-bird-data-2" name="pullet-refurbishing" type="radio" value="no">
                 <label class="govuk-label govuk-radios__label" for="has-bird-data-2">
                   No
                 </label>
