--- a/app/views/layinghens/current/pullet-score.html
+++ b/app/views/layinghens/current/pullet-score.html
@@ -230,7 +230,7 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <form class="form" action="{{ nextUrl }}" method="post">
+        <form class="form" action="pullet-score-answer" method="post">
           <button class="govuk-button govuk-!-margin-right-1 govuk-!-padding-left-4 govuk-!-padding-right-4" data-module="govuk-button">
             Continue
           </button>
